process_genomic.py now should support output from populations ran separately on each family and output male and female stats separately. Lab book figures corrected for comparison of local regression and moving average in num_csd.

--- a/reports/lab_book/lab_book.tex
+++ b/reports/lab_book/lab_book.tex
@@ -634,7 +634,7 @@ To obtain better result when trying to locate centromeres, I used the genomic ou
 
 \begin{figure}[h]
 	\begin{center}
-		\includegraphics[width=\textwidth]{Num_CSD_loci/centro_group_fix_d3r80_final.pdf}
+		\includegraphics[width=1.1\textwidth]{Num_CSD_loci/centro_group_fix_d3r80_final.pdf}
 		\caption{Comparing moving averages and local regression with second degree polynomials to approximate recombination rates. Populations was run on all individuals pooled together. Fixed SNPs are included and SNPs where the mother is homozygous or that were absent in the mother were removed in each family (r80, mindepth: 3). Parameters selected for comparison: window size: 20, span: 0.75. Dotted lines show the inferred centromeres position (i.e. the minimum of the curve) with both methods.}
 		\label{centro_fix}
 	\end{center}
