--- a/reports/lab_book/lab_book.tex
+++ b/reports/lab_book/lab_book.tex
@@ -678,10 +678,10 @@ Date: 21.08.2017
 
 The statistic I use when scanning the genome for CSD is $CSD=\frac{Hom_m+Het_f}{2}$ where $Hom_m$ and $Het_f$ are the proportions of homozygous males and heterozygous females respectively at each SNP. If the value is 1, all individuals respect the CSD pattern (all males are homozygous and all females are heterozygous) if it is 0, no individuals respect it (all males are heterozygous and all females homozygous). This metric should not be biased by the gradual decrease in heterozygosity along the chromosome arms as the same weight is given to males and females regardless of numbers. 
 
-\section{Simple association test}
+\section{Case-control association test}
 
 Date: 18.08.2017
-First, I will use a simple odds ratio to identify CSD hits. I will use a case-control design without taking families into account. I will perform this test separately for each category of mother and then I will use distance to centromeres to refine the lists of hits (c.f. Chapter: \ref{sec:num_csd} Number of CSD loci").
+I will use a simple case-control odds ratio to identify CSD hits. I will first do it without taking families into account. I will then perform this test separately for each category of mother and finally I will use distance to centromeres to refine the lists of hits (c.f. Chapter: \ref{sec:num_csd} Number of CSD loci").
 
 The odds ratio are computed fo each SNP using the following observed (O) contingency table where each cell is the number of genotypes corresponding to the category:
 
@@ -718,15 +718,29 @@ I applied this approach on grouped (i.e. single population run with all families
 	\begin{center}
 		\includegraphics[width=\textwidth]{association_mapping/naive_case_control_grouped.pdf}
 		\caption{Manhattan plots with log2 p-values for the case-control association test on CSD. Populations was run on all families together and for each SNP, all individuals were pooled to compute the proportion of homozygous individuals}
-		\label{sites_fam}
+		\label{naive_case_control}
 	\end{center}
 \end{figure}
+
+\subsection{Case-control on categories}
+
+Here, I apply the test after subsetting individuals by categories, inferred using diploid male production as detailed in section \ref{sec:cat_mothers} "Categorizing mothers". 
+
+I will do it considering different number of categories, corresponding to different scenari regarding the number of CSD loci. Figure \ref{naive_case_control} already addresses the unlikely scenario of single-locus CSD. Here, I will deal with 2 and 3 loci scenari, with 3 and 
+
+\subsection{Refining hits using centromeres}
+
 
 \section{Family-based association mapping}
 
 I will try to adapt the "generalized family-based association test for dichotomous traits" (GDT) published by Chen W.-M., Manichaikul A. and Rich S.S. in The American Journal of Human Genetics (2009). This test should work both in inbred and non-inbred families and takes family information into account.\\
 
-Here, I will modify the test presented in the publication to test for association of homozygosity with male phenotype instead of a particular allele with a disease.
+Here, I will modify the test presented in the publication to test for association of homozygosity with male phenotype instead of a particular allele with a disease. I will also need to make it work with a single parent.
+
+Date 23.08.2017
+
+After investigating the proofs of the score used in the family based test mentioned above, I realized adapting it would not make sense; it uses pedigree information and relies on the differences in kinship coefficients or proportion of IBD alleles. Since I have asexuals, all kinship coefficient in the families are 1, they are all siblings and it does not make much sense to include pedigree information. 
+I will instead focus on a better implementation of the case-control test.
 
 \chapter{Coverage analysis}
 
@@ -741,7 +755,7 @@ I first analysed the coverage on a per individual basis. That means for each ind
 
 \begin{figure}[h]
 	\begin{center}
-		\includegraphics[width=0.55\textwidth]{coverage_analysis/cov_per_sample.pdf}
+		\includegraphics[width=0.70\textwidth]{coverage_analysis/cov_per_sample.pdf}
 		\caption{Sample depth, averaged across all polymorphic sites which passed STACKS populations filters. Individuals of each family are plotted together and histograms are colored according to the family's mean depth.}
 		\label{sites_fam}
 	\end{center}
