updated lab book with categorization, changing individual lists to include new sequenced individuals

--- a/reports/lab_book/lab_book.tex
+++ b/reports/lab_book/lab_book.tex
@@ -571,15 +571,15 @@ It is possible to approximate the number of CSD loci heterozygous in a mother us
 \label{sec:cat_mothers}
 The mothers can be categorized based on this proportion of male offspring. The categories will reflect different combination of heterozygous CSD loci. Assuming the recombination rate is the same in different mothers, the different categories will depend only on the distance of the heterozygous locus/loci from the centromere. Loci further from the centromere will be undergo gene conversion more frequently.
 
-There are different scenario: 
+There are different scenarii: 
 \begin{itemize}
 \item 1 CSD locus: In this scenario, all mothers will be heterozygous at this locus and there should only be one category since the proportion of males among diploids will only depend on the distance of this locus from the centromere.
-\item 2 CSD loci, same chromosome: In this scenario, there should be 2 categories. The first category should consist of mothers that are heterozygous at the CSD locus that is furthest from the centromere and should have the lowest production of diploid males. The other category should include mothers that are heterozygous at the locus closest to the centromere or at both locus, since a recombination event proximal to the closest locus implies a transition to homozygosity for both loci.
-\item 2 CSD loci, different chromosomes: This scenario would allow for 3 categories of mothers; those heterozygous at one, the other, or both CSD loci. Those heterozygous at the furthest locus only should have the highest production of diploid males. Those with only the closest one would have a lower production. The females heterozygous at both loci would have the lowest production of diploid males (should be the product of the two other categories).
+\item 2 CSD loci, same chromosome: In this scenario, there should be a single category as only a recombination proximal to both loci would generat diploid males, therefore diploid male production only depends on the recombination rate of the locus that is closest to the centromere.
+\item 2 CSD loci, different chromosomes: This scenario would allow for 3 categories of mothers; those heterozygous at one, the other, or both CSD loci. Those heterozygous at the furthest locus only should have the highest production of diploid males as recombinations will be more frequent. Those with only the closest one would have a lower production. The females heterozygous at both loci would have the lowest production of diploid males (proportion ofshould be the product of the two other categories).
 \item 3 or more CSD loci: In case there are more than 2 loci, the number of categories would quickly increase beyond the scope of this study as we would not have enough families to detect the categories.
 \end{itemize}
 
-Noote that scenario 2 is only happening if both loci are on the same side of the centromere, otherwise two separate recombination events would be required to cause male development.
+Note that scenario 2 is only happening if both loci are on the same side of the centromere, otherwise two separate recombination events would be required to cause male development.
 
 Update: 02.08.2017
 
@@ -590,7 +590,11 @@ To address the latter problem, I propose the following strategy: If $m$ out of $
 To solve the issue of low number of families, we are preparing new libraries for sequencing, both expanding existing families and adding new ones. In total, we will add more than 200 individuals, but the exact number is subject to change.
 
 Once the mothers have been categorized based on the proportion of males in their diploid offspring, I will use this category information to filter CSD candidates common to mothers within one category.
-Assuming scenario 3, for instance, there will be 3 categories. I will first filter the best hits common to the category with the lowest production of diploid males. I will then look for overlap with the two other categories separately.
+Assuming scenario 3, for instance, there will be 3 categories. I will first filter the best hits common to the category with the lowest production of diploid males. I will then look for overlap with the two other categories separately.\\
+
+Date: 24.08.2017
+
+I used k-means clustering on proportion of males among diploid offspring to categorize families (Figure \ref{cat_mothers}). I assumed 3 clusters
 
 \section{Distance to centromeres}
 
