updated name list to remove duplicated W10 smaple

--- a/reports/lab_book/lab_book.tex
+++ b/reports/lab_book/lab_book.tex
@@ -833,7 +833,10 @@ I will follow their advice since my coverage is absurdly high, and I would benef
 
 \chapter{Additional samples}
 
-Since out
+Date: 26.08.2017
+Libraries 10 and 10b got back from the samples and I have processed them through the pipeline. Library10 suffered a dramatic loss in read count due to an unidentified technical problem (~10x less reads than lib10b).\\
+IMPORTANT: W10 appeared twice in the name list: once in library 10b and once in what will later be library11. Therefore I shifted the numbering by 1 for family W in library11. I will need to make sure this is the case in the barcode file as well.\\
+
 
 \FloatBarrier
 \chapter{TO DO}
